--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,9 @@ proguard/
 # Android Studio captures folder
 captures/
 
-.idea/
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+app/libs/
+app/src/main/res/drawable/
