--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,12 @@ proguard/
 # Android Studio captures folder
 captures/
 
-.idea/
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
