--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,11 @@ dependencies {
     compile 'com.firebase:geofire-android:2.1.2'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.android.support:design:26.+'
-    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
