new activity to view videos and pictures

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".CameraActivity" />
+        <activity android:name=".ViewActivity"></activity>
     </application>
 
 </manifest>
