--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,20 +71,20 @@
             android:value="AIzaSyB-P8K7s67w2_Ig9HVjuw-d5dm2PoRnNB8" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Activities.SignupActivity" />
+        <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ResetPasswordActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".CameraActivity" />
-        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".Activities.ResetPasswordActivity" />
+        <activity android:name=".Activities.ProfileActivity" />
+        <activity android:name=".Activities.CameraActivity" />
+        <activity android:name=".Activities.NotificationActivity"></activity>
     </application>
 
 </manifest>
